--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,21 @@
 <html>
 <head>
   <title>Blocitoff</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <ul class="nav nav-tabs">
+    <li><%= link_to "Home", welcome_home_path %></li>
+    <li><%= link_to "My Todos", welcome_todos_path%></li>
+  </ul>
+
+ <%= yield %>
+</div>
 
 </body>
 </html>
