--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,34 @@
-<h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
+  <div class="jumbotron">
+    <h1>Focus on what is important</h1> 
+    <p>Blocitoff will help you prioritise your tasks in customizable quadrants
+      <input class="form_txt centered_text" type="email" name="email" id="email" placeholder="NAME@COMPANY.COM">
+    <%= link_to "Sign Me Up!", new_user_registration_path, class: 'btn btn-lg btn-info' %>
+    </p>
+  </div>
+
+  <div class="container marketing">
+
+      <!-- Three columns of text below the Home image -->
+
+      <div class="row">
+        <div class="col-md-4">
+          <%= image_tag "1.png", class: "img-circle" %>
+          <h2>Prioritise your tasks in 4 quadrants</h2>
+          <p>There are 4 different quadranats. You can place your task in each quadarant depending on its importance</p>
+          <p><a class="btn" href="#">Learn more »</a></p>
+        </div> <!-- /.col-md-4 -->
+        <div class="col-md-4">
+          <%= image_tag "2.png" %>
+          <h2>Create different projects</h2>
+          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">View details »</a></p>
+        </div><!-- /.col-md-4 -->
+        <div class="col-md-4">
+          <%= image_tag "3.png" %>
+          <h2>View all project urgents tasks</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">View details »</a></p>
+        </div><!-- /.col-md-4 -->
+      </div><!-- /.row -->
+
+    
