--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,41 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+ 
+ <!--<% flash.each do |key,  value| %>
+ <%= content_tag(:div, value, class: "flash #{key}") %>
+ <% end %> -->
+
+<% if flash[:notice] %>
+  <div class="alert alert-success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= flash[:notice] %>
+  </div>
+  <% elsif flash[:error] %>
+  <div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss ="alert">&times;</button>
+    <%= flash[:error] %>
+  </div>
+  <% elsif flash[:alert] %>
+         <div class="alert alert-warning">
+           <button type="button" class="close" data-dismiss="alert">&times;</button>
+           <%= flash[:alert] %>
+         </div>
+       <% end %>
+
 
 <div class="container-fluid">
   <ul class="nav nav-tabs">
     <li><%= link_to "Home", welcome_home_path %></li>
     <li><%= link_to "My Todos", welcome_todos_path%></li>
+    <div class="pull-right user-info">
+      <% if current_user %>
+      Hello <%= current_user.name %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign in", new_user_session_path %> or 
+        <%= link_to "Sign up", new_user_registration_path %>
+      <% end %>
+    </div>
   </ul>
  <%= yield %>
 </div>
